elastic search implemented with Users model

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+
+ELASTIC_HOST=elasticsearch:9200
+SCOUT_DRIVER=elastic
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
